--- a/portfolioA.css
+++ b/portfolioA.css
@@ -11,7 +11,7 @@ nav {
     width: 100vw;
     z-index: 100;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background: #222;
     padding: 16px;
@@ -90,7 +90,7 @@ li {
     padding: 8px 15px;
     margin: 5px;
     background-color: #fdc731;
-    color: rgb(95, 69, 44);
+    color: rgb(95, 90, 44);
     text-decoration: none;
     border-radius: 5px;
 }
@@ -110,7 +110,7 @@ li {
 }
 .experience-item p,
 .experience-item ul li {
-    color: #050505;
+    color: #ffbb00;
 }
 @media (max-width: 768px) {
     nav {
